workload/otel-collector/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: otel-grpc-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: &host otel-grpc.homelab.linhng98.com
    http:
      paths:
      - backend:
          service:
            name: otel-collector-collector
            port:
              number: 4317
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
    secretName: otel-grpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: otel-http-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: &host otel-http.homelab.linhng98.com
    http:
      paths:
      - backend:
          service:
            name: otel-collector-collector
            port:
              number: 4318
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
    secretName: otel-http
